Updated files for the benchmark